# wire-framed

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/wire-framed-core/: Cargo.toml
src/wire-framed-core/src/: builder.rs  codec.rs  common_impls.rs  lib.rs  utils.rs
src/wire-framed-derive/: Cargo.toml
src/wire-framed-derive/src/: lib.rs
src/wire-framed-derive/src/decoding/: enum.rs  mod.rs  struct.rs
src/wire-framed-derive/src/encoding/: enum.rs  mod.rs  struct.rs
tests/: decoding.rs  decoding_enum.rs  encoding.rs  encoding_enum.rs
