[package]
name = "wire-framed"
version = "0.1.8"
edition = "2021"
categories = ["encoding"]
description = "A library for encoding and decoding structures into a binary data format."
homepage = "https://github.com/mscofield0/wire-framed"
keywords = ["encoding", "binary"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mscofield0/wire-framed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wire-framed-core = { version = "0.1.4" }
wire-framed-derive = { version = "0.1.2" }


[workspace]
members = [
	"src/wire-framed-core",
	"src/wire-framed-derive",
]