[package]
name = "wire-framed-core"
version = "0.1.2"
edition = "2021"
categories = ["encoding"]
description = "A library for encoding and decoding structures into a binary data format."
homepage = "https://github.com/mscofield0/wire-framed"
keywords = ["encoding", "binary"]
license-file = "../../LICENSE"
readme = "../../README.md"
repository = "https://github.com/mscofield0/wire-framed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"

[dev-dependencies]
anyhow = "1.0"
rassert-rs = "3.0"