[package]
name = "wire-framed-derive"
version = "0.1.1"
edition = "2021"
categories = ["encoding"]
description = "A library for encoding and decoding structures into a binary data format."
homepage = "https://github.com/mscofield0/wire-framed"
keywords = ["encoding", "binary"]
license-file = "../../LICENSE"
readme = "../../README.md"
repository = "https://github.com/mscofield0/wire-framed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }